--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ VITE_SENTRY_DSN=your_sentry_dsn
 
 # App
 VITE_APP_ENV=development
-VITE_APP_NAME="Neon Casino Guide"
+VITE_APP_NAME="CGSG SINGAPORE"
 VITE_APP_URL=http://localhost:5173
 
 # Feature Flags
