--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next": "^15.3.4",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -80,6 +81,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
