--- a/package.json
+++ b/package.json
@@ -54,10 +54,13 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.19.1",
+    "i18next": "^25.3.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.3.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -65,6 +68,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
