--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,16 +16,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    // ✅ Tambahkan types secara eksplisit
     "types": [
       "react",
-      "react-dom"
+      "react-dom",
+      "node"
     ],
     "incremental": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*",
+        "./app/*",
+        "./*"
       ]
     },
     "plugins": [
@@ -38,6 +40,7 @@
     "next-env.d.ts",
     "next-temp/**/*",
     "src/**/*",
+    "app/**/*",
     "types/**/*.d.ts",
     ".next/types/**/*.ts"
   ],
