--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*",
-        "./app/*",
-        "./*"
+        "./src/*"
       ]
     },
     "plugins": [
