--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.cjs",
+    "sitemap": "next-sitemap --config next-sitemap.config.cjs",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
@@ -64,7 +64,7 @@
     "next": "^15.3.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.4",
-    "next-sitemap": "^4.2.3",
+
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
