RADICAL FIX: Eliminate all dynamic imports and file system operations for Vercel compatibility

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "sitemap": "next-sitemap --config next-sitemap.config.cjs",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
