--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.56.2",
     "@tsparticles/engine": "^3.8.1",
@@ -62,7 +62,6 @@
     "next": "^15.3.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.4",
-
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
