--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@tanstack/react-query": "^5.56.2",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "@types/formidable": "^3.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "critters": "^0.0.23",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.19.1",
     "i18next": "^25.3.2",
     "input-otp": "^1.2.4",
