--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run production-check && next build",
+    "build:unsafe": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
+    "production-check": "node scripts/production-check.js",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next out dist"
   },
