--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,26 @@
   "version": 2,
   "buildCommand": "npm run build",
   "framework": "nextjs",
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "gurusingapore.com"
+        }
+      ],
+      "destination": "https://www.gurusingapore.com/$1",
+      "permanent": true
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://www.gurusingapore.com"
         },
         {
           "key": "Access-Control-Allow-Methods",
