--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "build:unsafe": "next build",
     "start": "next start",
@@ -61,7 +61,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.23.6",
     "i18next": "^25.3.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
