--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "^1.0.0",
     "critters": "^0.0.23",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.3.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.6",
